更新: トップページのメニューを現在のページ構成に合わせて変更
- メニュー項目を以下に変更:
  - 現長について (/about/)
  - 事業内容 (/services/)
  - 施工実績 (/works/)
  - 会社情報 (/company/)
  - 採用情報 (/recruit/)
  - お問い合わせ (/contact/)
  - お知らせ (/news/)
- 宿泊予約ボタンをお問い合わせボタンに変更
- 不要な言語切り替えメニューとモーダルを削除
- すべてのリンクを適切なページに接続

--- a/public/_monju/index.html
+++ b/public/_monju/index.html
@@ -53,33 +53,8 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- ボタン ------------>
-<div class="reser01"><a id="tg_reservation" data-content="inline" data-modal-mode data-modal-width="800" data-lightbox-animation="fade" data-modal-animation="scaleOut" href="#signup-lightbox" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center lightbox-link w100">> 宿泊予約</a>
-
-<div class="dropdown1">
-<button class="dropbtn1">> 言語 / Language</button>
-<div class="dropdown1-content">
-<a href="./" target="_blank">> 日本語</a>
-<a href="en.html" target="_blank">> ENGLISH</a>
-<a href="tc.html" target="_blank">> 中文繁體</a>
-<a href="sc.html" target="_blank">> 中文简体</a>
-<a href="ko.html" target="_blank">> 한국어</a>
+<div class="reser01"><a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
-
-</div>
-</div>
-
-<div id="reser03">
-<ul>
-<li>
-<a id="tg_reservation" data-content="inline" data-modal-mode data-modal-width="500px" data-lightbox-animation="fade" data-modal-animation="scaleOut" href="#signup-lightbox" class="lightbox-link"><img src="../img/sp_btn01.png" class="waku1"alt="「ネット」で予約"/></a>
-</li>
-<li>
-<a id="tg_reservation" data-content="inline" data-modal-mode data-modal-width="500px" data-lightbox-animation="fade" data-modal-animation="scaleOut" href="#signup-lightbox2" class="lightbox-link"><img src="../img/sp_btn02.png" class="waku2" alt="「ネット」で予約"/></a>
-</li>
-</ul>
-</div>
-
-<div class="trip01"><a href="https://monjusou.com/info/117/"><img src="../img/trip2025.png" class="linkimg"></a></div>
 
 <!-- メニュー ------------>
 <div class="page_main">
@@ -87,26 +62,15 @@
 <aside>
 <ul class="scroll-box">
 <div class="menu_logo"><a href="./"><img src="img/logo_menu01_new.png" class="linkimg"></a></div>
-<li><a href="01concept/index.html">現長について</a></li>
-<li><a href="02room/index.html">施工実績</a></li>
-<li><a href="03spa/index.html">保守・メンテナンス</a></li>
-<li><a href="04cuisine/index.html">取扱製品・資材</a></li>
-<li><a href="05facility/index.html">会社情報</a></li>
-<li><a href="06access/index.html">アクセス</a></li>
-<li><a href="07wedd/index.html">採用情報</a></li>
-<li><a href="08qa/index.html">よくある質問</a></li>
-<li><a href="info/category/info/">お知らせ</a></li>
-<li class="sub-menu"><a href="09others/index.html">その他</a>
-<ul class="sub-menu-nav">
-<li><a href="09others/01seeing.html">周辺観光</a></li>
-<li><a href="09others/02movie.html">映像アルバム</a></li>
-<li><a href="09others/03accomm.html">宿泊約款</a></li>
-<li><a href="09others/04privacy.html">プライバシーポリシー</a></li>
-<li><a href="09others/05sitemap.html">サイトマップ</a></li>
-</ul>
-</li>
+<li><a href="/about/">現長について</a></li>
+<li><a href="/services/">事業内容</a></li>
+<li><a href="/works/">施工実績</a></li>
+<li><a href="/company/">会社情報</a></li>
+<li><a href="/recruit/">採用情報</a></li>
+<li><a href="/contact/">お問い合わせ</a></li>
+<li><a href="/news/">お知らせ</a></li>
 <div class="mt-20">
-<a id="tg_reservation" data-content="inline" data-modal-mode data-modal-width="800" data-lightbox-animation="fade" data-modal-animation="scaleOut" href="#signup-lightbox" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center lightbox-link w100">> 宿泊予約</a>
+<a href="/contact/" class="button xlarge bkg-theme-blk bkg-hover-theme-blk1 center w100">> お問い合わせ</a>
 </div>
 <div class="">
 <a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_gry f16"></span></a>
