強制デプロイ: index.htmlのタイムスタンプを更新してFTP再アップロードをトリガー

--- a/public/_monju/index.html
+++ b/public/_monju/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<!-- Last updated: 2025-10-08 20:30 JST - Fix scroll blackout bug -->
+<!-- Last updated: 2025-10-09 14:50 JST - Update menu navigation -->
 <meta charset="UTF-8">
 <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0" name="viewport">
 <title>【公式】現長株式会社｜シートシャッター施工・建築工事</title>
