デバッグ: bodyタグ直後にコメント追加して変更検証

--- a/public/_monju/index.html
+++ b/public/_monju/index.html
@@ -47,6 +47,7 @@
 
 </head>
 <body>
+<!-- Menu updated: 2025-10-09 -->
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTB2VRX"
