修正: aboutページのヒーローセクション上部余白を削除

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -59,7 +59,7 @@
 
 <!------ Hero Section: Large Image with Vertical Title ----------------------------------------------->
 
-<section class="section-block feature-2 right no-padding-bottom">
+<section class="section-block feature-2 right no-padding-bottom no-padding-top">
 <div class="row flex">
 <div class="column width-8">
 <div class="feature-image mb-mobile-50">
