修正: aboutページのフッターをトップページと同じ構造に変更

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -271,41 +271,45 @@
 
 <!------ Footer ----------------------------------------------->
 
-<footer>
-<div class="footer">
-<div class="content_l tategaki03 scroll-box">
-<h1 class="ls01 shin lh18 f18">現長株式会社<br /><span class="allura ls01 f18 lh15 f_grn">GENCHO Co., Ltd.</span></h1>
-<p class="p2">〒416-0944<br />静岡県富士市横割6-8-1</p>
-<p class="p2">TEL : 0545-61-1344<br />FAX : 0545-61-1343</p>
-<ul class="f_grn p2">
-<li>シートシャッター専門施工</li>
-<li>基礎・土間工事</li>
-<li>テント倉庫改修</li>
-<li>建具・サッシ工事</li>
-</ul>
+<section class="footer">
+
+<div class="footer-bottom">
+<div class="row pt-50">
+<div class="column width-12 center mb-30">
+---　GENCHO GROUP　---
+</div></div>
+
+<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
+  <div class="column width-3 mb-10">
+  <a href="https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 公式サイト</a>
+  </div>
+  <div class="column width-3 mb-10">
+  <a href="https://www.gencho.biz/services-4" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 事業内容</a>
+  </div>
+  <div class="column width-3 mb-10">
+  <a href="https://www.gencho.biz/%E4%BC%9A%E7%A4%BE%E6%A6%82%E8%A6%81" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社概要</a>
+  </div>
+  <div class="column width-3 mb-10">
+  <a href="https://en-gage.net/gencho/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
+  </div>
+  </div>
+
 </div>
-<div class="content_c">
-<div class="logo_area">
-<img src="/img/logo_wht08_new.png" alt="現長株式会社ロゴ" />
+
+<div class="f09 bkg-blk-footer">
+<div class="row">
+<div class="column width-6 f11 left1">
+<a href="/about/">現長について</a> ｜ <a href="/services/">事業内容</a> ｜ <a href="/contact/">お問い合わせ</a>
 </div>
-<ul class="f_wht mb-20 ls01">
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
-<li><a href="/company/">会社情報</a></li>
-<li><a href="/recruit/">採用情報</a></li>
-<li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
-</ul>
-<div class="mb-20">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_wht f20"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_wht f20"></span></a>
+<div class="column width-6 right1">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
 </div>
 </div>
-<div class="content_r"></div>
 </div>
-<div class="copy_r"><p class="p2">Copyright © 2025 GENCHO Co., Ltd. All Rights Reserved.</p></div>
-</footer>
+
+</div>
+
+</section>
+<!-- Footer End -->
 
 <!-- Scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
