--- a/public/works/index.html
+++ b/public/works/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<!-- Last updated: 2025-10-09 - Works page created -->
+<!-- Last updated: 2025-10-09 - Works page redesigned with gallery layout -->
 <meta charset="UTF-8">
 <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0" name="viewport">
 <title>施工実績｜現長株式会社</title>
-<meta name="description" content="現長株式会社の施工実績をご紹介します。工場、倉庫、物流施設など、多様な業種での豊富な実績がございます。">
-<meta name="keywords" content="施工実績,実績,シートシャッター,工場,倉庫,現長株式会社">
+<meta name="description" content="現長株式会社の施工実績をご紹介します。工場、倉庫、物流施設、商業施設など、多様な業種での豊富な施工経験がございます。">
+<meta name="keywords" content="施工実績,工場,倉庫,物流施設,商業施設,シートシャッター,現長株式会社">
 
 <!-- Favicon -->
 <link rel="shortcut icon" href="/favicon.ico">
@@ -24,6 +24,114 @@
 <link rel="stylesheet" href="/css/core.min.css" />
 <link rel="stylesheet" href="/css/style.css" />
 <link rel="stylesheet" href="/css/layerBoard.css">
+
+<style>
+/* Gallery specific styles */
+.category-tabs {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+}
+
+.category-tab {
+    padding: 12px 30px;
+    border: 2px solid #58980b;
+    background: transparent;
+    color: #58980b;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 16px;
+    font-family: 'Noto Serif JP', serif;
+}
+
+.category-tab:hover,
+.category-tab.active {
+    background: #58980b;
+    color: #fff;
+}
+
+.works-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    margin-bottom: 60px;
+}
+
+@media (max-width: 768px) {
+    .works-grid {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+}
+
+.work-item {
+    position: relative;
+    overflow: hidden;
+    aspect-ratio: 4/3;
+    cursor: pointer;
+}
+
+.work-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+}
+
+.work-item:hover img {
+    transform: scale(1.05);
+}
+
+.work-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(88, 152, 11, 0.9);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    padding: 30px;
+    text-align: center;
+}
+
+.work-item:hover .work-overlay {
+    opacity: 1;
+}
+
+.work-overlay h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.work-overlay .location {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.work-overlay .date {
+    font-size: 14px;
+    margin-bottom: 15px;
+    opacity: 0.9;
+}
+
+.work-overlay .description {
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.work-item.hidden {
+    display: none;
+}
+</style>
 
 </head>
 <body>
@@ -57,44 +165,26 @@
 </aside>
 </div>
 
-<!------ Hero Section ----------------------------------------------->
+<!------ Hero Section: Large Background Image with Vertical Title ----------------------------------------------->
 
-<section class="section-block bkg-info02 pt-60 mb-40">
-<div class="row">
-<div class="column width-12 center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000ms;">
-<h2 class="ls02 f16a lh18">施工実績<br />
-<span class="allura f16 f_grn ls01 mb-10">Works</span>
-</h2>
-<p class="p1">
-確かな技術と実績<br class="pc" />
-多様な業種での豊富な施工経験
-</p>
-</div>
-</div>
-</section>
-
-<!------ Factory Projects ----------------------------------------------->
-
-<section class="section-block feature-2 right no-padding-bottom">
+<section class="section-block feature-2 right no-padding-bottom no-padding-top">
 <div class="row flex">
-<div class="column width-6">
+<div class="column width-8">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="/img/work01.jpg" alt="工場施工実績" /></div>
-<div class="sp"><img src="/img/work01_sp.jpg" alt="工場施工実績" /></div>
+<div class="pc"><img src="/img/top01.jpg" alt="施工実績" /></div>
+<div class="sp"><img src="/img/top01_sp.jpg" alt="施工実績" /></div>
 </div>
 </div>
 </div>
-<div class="column width-5 offset-1 tategaki02">
+<div class="column width-3 offset-1 tategaki02">
 <div class="feature-content">
 <div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">工場・製造施設<span class="pc">　　　</span><br class="sp" /><span class="allura f_grn shin ls01 ml-20">Factory</span></h2>
+<h2 class="lspacing-medium f16 ml-20 lh15">施工実績<span class="pc">　　　</span><br class="sp" /><span class="allura f_grn shin ls01 ml-20">Works</span></h2>
 <p class="p1 ml-20">
-大手製造業から中小工場まで、多数の高速シートシャッター施工実績がございます。<br /><br />
-
-生産ラインに合わせた最適な開口部設計と、高速・静音・耐久性を兼ね備えたシャッターをご提案いたします。<br /><br />
-
-短工期での施工にも対応し、お客様の生産活動への影響を最小限に抑えます。
+確かな技術と実績<br /><br />
+多様な業種での豊富な施工経験<br /><br />
+お客様のニーズに応える最適なソリューション
 </p>
 </div>
 </div>
@@ -102,65 +192,144 @@
 </div>
 </section>
 
-<!------ Warehouse Projects ----------------------------------------------->
+<!------ Category Tabs ----------------------------------------------->
 
-<section class="section-block feature-2 no-padding-bottom">
-<div class="row flex">
-<div class="column width-6 push-3 offset-1">
-<div class="feature-image mb-mobile-50">
-<div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<div class="img-wrap1">
-<div class="pc"><img src="/img/work02.jpg" alt="倉庫施工実績" /></div>
-<div class="sp"><img src="/img/work02_sp.jpg" alt="倉庫施工実績" /></div>
+<section class="section-block">
+<div class="row">
+<div class="column width-12 center_sp">
+<div class="category-tabs horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;" data-threshold="0.3">
+<button class="category-tab active" data-category="all">全て</button>
+<button class="category-tab" data-category="factory">工場・製造施設</button>
+<button class="category-tab" data-category="warehouse">倉庫・物流施設</button>
+<button class="category-tab" data-category="commercial">商業施設</button>
 </div>
 </div>
 </div>
-</div>
-<div class="column width-5 pull-7 tategaki02">
-<div class="feature-content">
-<div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">倉庫・物流施設<span class="pc">　　　</span><br class="sp" /><span class="allura f_grn shin ls01 ml-20">Warehouse</span></h2>
-<p class="p1 ml-20">
-<strong class="f_grn">物流センター</strong><br />
-大型物流センターの開口部に、高速シートシャッターを多数施工しております。<br /><br />
 
-<strong class="f_grn">冷蔵・冷凍倉庫</strong><br />
-温度管理が重要な施設にも対応した施工実績がございます。<br /><br />
+<!------ Works Gallery Grid ----------------------------------------------->
 
-<strong class="f_grn">既存倉庫の改修</strong><br />
-老朽化したシャッターの交換工事も承ります。
-</p>
+<div class="row">
+<div class="column width-12">
+<div class="works-grid horizon" data-animate-in="preset:slideInUpShort;duration:1500ms;delay:200ms;" data-threshold="0.3">
+
+<!-- Work Item 1 -->
+<div class="work-item" data-category="factory">
+<img src="/img/work01.jpg" alt="大手製造業様 工場施工実績" />
+<div class="work-overlay">
+<h3>大手製造業A社様</h3>
+<p class="location"><i class="fa-solid fa-location-dot"></i> 静岡県富士市</p>
+<p class="date"><i class="fa-regular fa-calendar"></i> 2025年3月</p>
+<p class="description">高速シートシャッター5台設置<br />生産ラインの温度管理を最適化</p>
 </div>
+</div>
+
+<!-- Work Item 2 -->
+<div class="work-item" data-category="warehouse">
+<img src="/img/work02.jpg" alt="物流センター施工実績" />
+<div class="work-overlay">
+<h3>大型物流センターB社様</h3>
+<p class="location"><i class="fa-solid fa-location-dot"></i> 愛知県名古屋市</p>
+<p class="date"><i class="fa-regular fa-calendar"></i> 2025年1月</p>
+<p class="description">高速シートシャッター8台設置<br />物流効率の大幅な向上を実現</p>
+</div>
+</div>
+
+<!-- Work Item 3 -->
+<div class="work-item" data-category="commercial">
+<img src="/img/work03.jpg" alt="ショッピングセンター施工実績" />
+<div class="work-overlay">
+<h3>ショッピングセンターC社様</h3>
+<p class="location"><i class="fa-solid fa-location-dot"></i> 神奈川県横浜市</p>
+<p class="date"><i class="fa-regular fa-calendar"></i> 2024年12月</p>
+<p class="description">営業時間外での施工対応<br />店舗運営への影響ゼロ</p>
+</div>
+</div>
+
+<!-- Work Item 4 -->
+<div class="work-item" data-category="factory">
+<img src="/img/top01.jpg" alt="食品工場施工実績" />
+<div class="work-overlay">
+<h3>食品製造工場D社様</h3>
+<p class="location"><i class="fa-solid fa-location-dot"></i> 静岡県静岡市</p>
+<p class="date"><i class="fa-regular fa-calendar"></i> 2024年11月</p>
+<p class="description">衛生管理に配慮した高速シャッター<br />クリーンルーム対応</p>
+</div>
+</div>
+
+<!-- Work Item 5 -->
+<div class="work-item" data-category="warehouse">
+<img src="/img/top01.jpg" alt="冷蔵倉庫施工実績" />
+<div class="work-overlay">
+<h3>冷蔵・冷凍倉庫E社様</h3>
+<p class="location"><i class="fa-solid fa-location-dot"></i> 東京都江東区</p>
+<p class="date"><i class="fa-regular fa-calendar"></i> 2024年10月</p>
+<p class="description">断熱性能を重視した施工<br />エネルギーコスト削減に貢献</p>
+</div>
+</div>
+
+<!-- Work Item 6 -->
+<div class="work-item" data-category="factory">
+<img src="/img/top01.jpg" alt="自動車部品工場施工実績" />
+<div class="work-overlay">
+<h3>自動車部品工場F社様</h3>
+<p class="location"><i class="fa-solid fa-location-dot"></i> 愛知県豊田市</p>
+<p class="date"><i class="fa-regular fa-calendar"></i> 2024年9月</p>
+<p class="description">高速シートシャッター12台設置<br />短工期での一斉施工を実現</p>
+</div>
+</div>
+
 </div>
 </div>
 </div>
 </section>
 
-<!------ Commercial Projects ----------------------------------------------->
+<!------ Numbers: Company Statistics ----------------------------------------------->
 
-<section class="section-block feature-2 right">
-<div class="row flex">
-<div class="column width-6">
-<div class="feature-image mb-mobile-50">
-<div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="/img/work03.jpg" alt="商業施設施工実績" /></div>
-<div class="sp"><img src="/img/work03_sp.jpg" alt="商業施設施工実績" /></div>
+<section class="section-block bkg-info02">
+<div class="row">
+<div class="column width-12 horizon" data-animate-in="preset:slideInUpShort;duration:3000ms;">
+<h2 class="ls02 f16 center_sp mb-40">数字で見る実績<br /><span class="allura f_grn shin ls01">Our Achievements</span></h2>
 </div>
 </div>
-</div>
-<div class="column width-5 offset-1 tategaki02">
-<div class="feature-content">
-<div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
-<h2 class="lspacing-medium f16 ml-20 lh15">商業施設<span class="pc">　　　</span><br class="sp" /><span class="allura f_grn shin ls01 ml-20">Commercial</span></h2>
-<p class="p1 ml-20">
-ショッピングセンター、スーパーマーケット、ホームセンターなど、商業施設での施工実績も豊富にございます。<br /><br />
 
-営業時間外での施工や、段階的な工事など、お客様のご要望に柔軟に対応いたします。<br /><br />
-
-美観と機能性を両立したシャッターをご提案いたします。
-</p>
-<a href="/contact/" class="button large bkg-btn01 bkg-hover-btn01">> お問い合わせ</a>
+<div class="row">
+<div class="column width-3 center_sp mb-30">
+<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:0ms;" data-threshold="0.3">
+<div class="f_grn" style="font-size: 4rem; font-weight: bold;">500+</div>
+<h3 class="f16 mb-10">累計施工件数</h3>
+<p class="p1">1985年の創業以来<br />多数の施工実績</p>
 </div>
+</div>
+
+<div class="column width-3 center_sp mb-30">
+<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:200ms;" data-threshold="0.3">
+<div class="f_grn" style="font-size: 4rem; font-weight: bold;">20+</div>
+<h3 class="f16 mb-10">対応業種数</h3>
+<p class="p1">製造業から商業施設まで<br />幅広い業種に対応</p>
+</div>
+</div>
+
+<div class="column width-3 center_sp mb-30">
+<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:400ms;" data-threshold="0.3">
+<div class="f_grn" style="font-size: 4rem; font-weight: bold;">2週間</div>
+<h3 class="f16 mb-10">平均工期</h3>
+<p class="p1">お客様の業務への<br />影響を最小限に</p>
+</div>
+</div>
+
+<div class="column width-3 center_sp mb-30">
+<div class="horizon" data-animate-in="preset:scaleOut;duration:3000;delay:600ms;" data-threshold="0.3">
+<div class="f_grn" style="font-size: 4rem; font-weight: bold;">85%</div>
+<h3 class="f16 mb-10">リピート率</h3>
+<p class="p1">高い顧客満足度<br />多数のリピートご依頼</p>
+</div>
+</div>
+</div>
+
+<div class="row">
+<div class="column width-12 center_sp mb-30">
+<div class="horizon" data-animate-in="preset:slideInUpShort;duration:3000;delay:800ms;" data-threshold="0.3">
+<a href="/contact/" class="button xlarge bkg-btn01 bkg-hover-btn01">> お見積もり・ご相談はこちら</a>
 </div>
 </div>
 </div>
@@ -168,41 +337,45 @@
 
 <!------ Footer ----------------------------------------------->
 
-<footer>
-<div class="footer">
-<div class="content_l tategaki03 scroll-box">
-<h1 class="ls01 shin lh18 f18">現長株式会社<br /><span class="allura ls01 f18 lh15 f_grn">GENCHO Co., Ltd.</span></h1>
-<p class="p2">〒416-0944<br />静岡県富士市横割6-8-1</p>
-<p class="p2">TEL : 0545-61-1344<br />FAX : 0545-61-1343</p>
-<ul class="f_grn p2">
-<li>シートシャッター専門施工</li>
-<li>基礎・土間工事</li>
-<li>テント倉庫改修</li>
-<li>建具・サッシ工事</li>
-</ul>
+<section class="footer">
+
+<div class="footer-bottom">
+<div class="row pt-50">
+<div class="column width-12 center mb-30">
+---　GENCHO GROUP　---
+</div></div>
+
+<div class="row pb-20 horizon" data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;" data-threshold="0.3">
+  <div class="column width-3 mb-10">
+  <a href="https://www.gencho.biz/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 公式サイト</a>
+  </div>
+  <div class="column width-3 mb-10">
+  <a href="https://www.gencho.biz/services-4" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 事業内容</a>
+  </div>
+  <div class="column width-3 mb-10">
+  <a href="https://www.gencho.biz/%E4%BC%9A%E7%A4%BE%E6%A6%82%E8%A6%81" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 会社概要</a>
+  </div>
+  <div class="column width-3 mb-10">
+  <a href="https://en-gage.net/gencho/" target="_blank" class="button large border-charcoal border-hover-theme-blk color-charcoal center w100">> 採用情報</a>
+  </div>
+  </div>
+
 </div>
-<div class="content_c">
-<div class="logo_area">
-<img src="/img/logo_wht08_new.png" alt="現長株式会社ロゴ" />
+
+<div class="f09 bkg-blk-footer">
+<div class="row">
+<div class="column width-6 f11 left1">
+<a href="/about/">現長について</a> ｜ <a href="/services/">事業内容</a> ｜ <a href="/contact/">お問い合わせ</a>
 </div>
-<ul class="f_wht mb-20 ls01">
-<li><a href="/about/">現長について</a></li>
-<li><a href="/services/">事業内容</a></li>
-<li><a href="/works/">施工実績</a></li>
-<li><a href="/company/">会社情報</a></li>
-<li><a href="/recruit/">採用情報</a></li>
-<li><a href="/contact/">お問い合わせ</a></li>
-<li><a href="/news/">お知らせ</a></li>
-</ul>
-<div class="mb-20">
-<a href="https://twitter.com/gencho416" target="_blank"><span class="fa-brands fa-twitter f_wht f20"></span></a>
-<a href="https://www.facebook.com/gencho416" target="_blank"><span class="fa-brands fa-facebook f_wht f20"></span></a>
+<div class="column width-6 right1">Copyright(C) GENCHO Co., Ltd. , All Rights Reserved.
 </div>
 </div>
-<div class="content_r"></div>
 </div>
-<div class="copy_r"><p class="p2">Copyright © 2025 GENCHO Co., Ltd. All Rights Reserved.</p></div>
-</footer>
+
+</div>
+
+</section>
+<!-- Footer End -->
 
 <!-- Scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -228,6 +401,22 @@ $(function(){
             };
         });
 
+    // Category filter functionality
+    $('.category-tab').on('click', function(){
+        var category = $(this).data('category');
+
+        // Update active tab
+        $('.category-tab').removeClass('active');
+        $(this).addClass('active');
+
+        // Filter work items
+        if(category === 'all'){
+            $('.work-item').removeClass('hidden');
+        } else {
+            $('.work-item').addClass('hidden');
+            $('.work-item[data-category="' + category + '"]').removeClass('hidden');
+        }
+    });
 });
 </script>
 
