修正: servicesページの画像表示とレイアウト問題を解消
- 画像パスを修正（work01-03.jpg → top01-04.jpg）
- 建具・サッシ工事セクションのレイアウト調整（画像とテキストの重なりを解消）
- 対応業種セクションの下部余白を追加（フッターとの重なりを解消）

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -240,8 +240,8 @@
 <div class="column width-8">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="/img/work01.jpg" alt="シートシャッター施工" /></div>
-<div class="sp"><img src="/img/work01.jpg" alt="シートシャッター施工" /></div>
+<div class="pc"><img src="/img/top01.jpg" alt="シートシャッター施工" /></div>
+<div class="sp"><img src="/img/top01_sp.jpg" alt="シートシャッター施工" /></div>
 </div>
 </div>
 </div>
@@ -307,8 +307,8 @@
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
 <div class="img-wrap1">
-<div class="pc"><img src="/img/work02.jpg" alt="基礎・土間工事" /></div>
-<div class="sp"><img src="/img/work02.jpg" alt="基礎・土間工事" /></div>
+<div class="pc"><img src="/img/top02.jpg" alt="基礎・土間工事" /></div>
+<div class="sp"><img src="/img/top02_sp.jpg" alt="基礎・土間工事" /></div>
 </div>
 </div>
 </div>
@@ -340,8 +340,8 @@
 <div class="column width-6">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
-<div class="pc"><img src="/img/work03.jpg" alt="テント倉庫改修" /></div>
-<div class="sp"><img src="/img/work03.jpg" alt="テント倉庫改修" /></div>
+<div class="pc"><img src="/img/top03.jpg" alt="テント倉庫改修" /></div>
+<div class="sp"><img src="/img/top03_sp.jpg" alt="テント倉庫改修" /></div>
 </div>
 </div>
 </div>
@@ -366,17 +366,17 @@
 
 <section class="section-block feature-2 no-padding-bottom">
 <div class="row flex">
-<div class="column width-6 push-3 offset-1">
+<div class="column width-5 push-5 offset-1">
 <div class="feature-image mb-mobile-50">
 <div class="feature-image-inner center-on-mobile horizon" data-animate-in="preset:slideInRightShort;duration:3000;delay:300ms;" data-threshold="0.3">
 <div class="img-wrap1">
-<div class="pc"><img src="/img/top01.jpg" alt="建具・サッシ工事" /></div>
-<div class="sp"><img src="/img/top01_sp.jpg" alt="建具・サッシ工事" /></div>
+<div class="pc"><img src="/img/top04.jpg" alt="建具・サッシ工事" /></div>
+<div class="sp"><img src="/img/top04_sp.jpg" alt="建具・サッシ工事" /></div>
 </div>
 </div>
 </div>
 </div>
-<div class="column width-5 pull-7 tategaki02">
+<div class="column width-6 pull-6 tategaki02">
 <div class="feature-content">
 <div class="feature-content-inner left center_sp horizon" data-animate-in="preset:slideInLeftShort;duration:3000;" data-threshold="0.3">
 <h2 class="lspacing-medium f16 ml-20 lh15">建具・サッシ工事<span class="pc">　　　</span><br class="sp" /><span class="allura f_grn shin ls01 ml-20">Building Fixtures</span></h2>
@@ -502,7 +502,7 @@
 </div>
 
 <div class="row">
-<div class="column width-12 center_sp mb-30 mt-40">
+<div class="column width-12 center_sp mt-40" style="margin-bottom: 80px;">
 <div class="horizon" data-animate-in="preset:slideInUpShort;duration:1500ms;delay:400ms;">
 <a href="/contact/" class="button xlarge bkg-btn01 bkg-hover-btn01">> お問い合わせ・ご相談はこちら</a>
 </div>
